[package]
name = "minesweeper"
version = "0.1.0"
edition = "2021"
license = "Apache 2.0"
[package.metadata.deb]
copyright = "2022, Karton Realista"
maintainer = "Karton Realista"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.10", features = ["debug"] }
rand = "0.8.5"

[profile.release]
codegen-units = 1
lto = "fat"
strip = "symbols"